# to-do-app-ph-III-chatbot

./: .gitignore  README.md  fix_sqlite_schema.py  pyproject.toml  requirements.txt  run_servers.py  start_backend.py  start_mcp_server.py  test_app_integration.py  test_schema.py  test_sqlite_integration.py
.specify/memory/: constitution.md
backend/: .env.example  add_missing_columns.py  agent.py  alembic.ini  database.db  main.py  migrate.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/crud/: conversation_crud.py  task_crud.py
backend/database/: connection.py
backend/mcp_server/: server.py
backend/models/: conversation_model.py  task_model.py
backend/src/: main.py
frontend/: package-lock.json  package.json
frontend/.next/: trace
history/adr/: 001-database-migration-sqlite-to-neon-postgresql-with-async-support.md  002-automatic-database-url-transformation-for-async-compatibility.md  003-task-driven-development-approach-for-full-stack-application.md  ai-native-architecture-evolution.md
specs/001-fix-ts-arithmetic-error/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mcp-server-ai-agent-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/database-neon-config/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/database-url-transform/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/phase2-web/: api_response_format.txt  data-model.md  database_schema.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  (+1 more)
(+90 files in other folders)
